<resources>
    <string name="app_name">CS727</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Tic-Tac-Toe Settings</string>
    <string name="settings_shortcut">s</string>
    <string name="colors_title">Inverted Colors</string>
    <string name="colors_summary">Use light or dark colors for the board.</string>
    <string name="main_title">Tic-Tac-Toe</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">About Tic-Tac-Toe</string>
    <string name="about_text">\
        Tic-tac-toe is game of 9 squares where players alternately place an \'X\' or an \'O\' on a <i>3x3 </i>grid.  To win, you must get three X\'s or O\'s in a row.</string>
    <string name="player_label">Game available. Join? </string>
    <string name="computer_label">Computer</string>
    <string name="random_label">Random</string>
    <string name="game_title">Game</string>
</resources>
